--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -128,6 +128,7 @@ nav {
         .nav-root {
             padding: 1rem;
             opacity: 0;
+            height: calc(100dvh - 2rem);
             transition: opacity 0.3s ease-out;
 
             .nav-item {
